--- a/style/themeuikit.css
+++ b/style/themeuikit.css
@@ -14654,7 +14654,6 @@ body.moodle26plus .file-picker .fp-login-form p {
   margin-top: 3em;
 }
 body.moodle26plus .file-picker .fp-login-form .fp-login-input label {
-  text-align: right;
   display: block;
 }
 body.moodle26plus .file-picker .fp-login-form .fp-login-input .input {
@@ -15314,6 +15313,18 @@ body.moodle26plus .dir-rtl .filepicker .fp-formset .controls {
   margin-left: 0;
   text-align: right;
 }
+@media all and (max-width: 872px) {
+  body.moodle26plus .file-picker .fp-repo-area,
+  body.moodle26plus body.moodle26plus .file-picker .fp-repo-items {
+    width: 100%;
+  }
+  body.moodle26plus .file-picker .fp-repo-area {
+    height: 325;
+  }
+  body.moodle26plus .filepicker {
+    z-index: 999;
+  }
+}
 /*
  * These are styles for the file manager in Moodle 2.6-
  * I really don't want to maintain already two different theme branches...
@@ -15956,7 +15967,6 @@ body.moodle26prior .file-picker .fp-login-form p {
   margin-top: 3em;
 }
 body.moodle26prior .file-picker .fp-login-form .fp-login-input label {
-  text-align: right;
   display: block;
 }
 body.moodle26prior .file-picker .fp-login-form .fp-login-input .input {
@@ -16488,6 +16498,18 @@ body.moodle26prior .dir-rtl .filepicker .yui-layout-unit-left {
 }
 body.moodle26prior .dir-rtl .filepicker .yui-layout-unit-center {
   left: 0;
+}
+@media all and (max-width: 872px) {
+  body.moodle26prior .file-picker .fp-repo-area,
+  body.moodle26prior body.moodle26plus .file-picker .fp-repo-items {
+    width: 100%;
+  }
+  body.moodle26prior .file-picker .fp-repo-area {
+    height: 325;
+  }
+  body.moodle26prior .filepicker {
+    z-index: 999;
+  }
 }
 .gradetreebox h4 {
   font-size: 14px;
